// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render bold 1`] = `
.c0 {
  font-size: 0.9375em;
  line-height: 1.25rem;
}

.c1 {
  font-size: 0.9375em;
  line-height: 1.25em;
}

@media (min-width:20em) {
  .c0 {
    font-size: 1em;
    line-height: 1.375rem;
  }
}

@media (min-width:20em) {
  .c1 {
    font-size: 1em;
    line-height: 1.375em;
  }
}

<p
  className="c0"
>
  This is text with 
  <b
    className="c1"
  >
    some bold formatting
  </b>
  .
</p>
`;

exports[`Text should render inline-code 1`] = `
.c0 {
  font-size: 0.9375em;
  line-height: 1.25rem;
}

@media (min-width:20em) {
  .c0 {
    font-size: 1em;
    line-height: 1.375rem;
  }
}

<p
  className="c0"
>
  This is text with 
  <code>
    some inline code
  </code>
  .
</p>
`;

exports[`Text should render italics 1`] = `
.c0 {
  font-size: 0.9375em;
  line-height: 1.25rem;
}

.c1 {
  font-size: 0.9375em;
  line-height: 1.25em;
}

@media (min-width:20em) {
  .c0 {
    font-size: 1em;
    line-height: 1.375rem;
  }
}

@media (min-width:20em) {
  .c1 {
    font-size: 1em;
    line-height: 1.375em;
  }
}

<p
  className="c0"
>
  This is text with 
  <i
    className="c1"
  >
    some italic formatting
  </i>
  .
</p>
`;

exports[`Text should render strike-through 1`] = `
.c0 {
  font-size: 0.9375em;
  line-height: 1.25rem;
}

@media (min-width:20em) {
  .c0 {
    font-size: 1em;
    line-height: 1.375rem;
  }
}

<p
  className="c0"
>
  This is text with 
  <del>
    some strike-through formatting
  </del>
  .
</p>
`;
